--- a/ubossweb/css/css.css
+++ b/ubossweb/css/css.css
@@ -138,15 +138,17 @@
 .mrelation_t{ font-size: 16px; width: 200px; height: 16px; font-weight: 300; line-height: 10px; position: relative; top: -10px; padding-left: 20px;}
 .t_relation_val{width: 100px; height: 30px;float: right; text-align: center; font-size: 14px; line-height: 30px; font-weight: bold;}
 .relation_list{width: 280px;}
-.relation_list li{width: 100%; height: 25px; font-size: 14px; background-image: url(../img/friends.png); background-position-x: 40px; border-bottom: 1px #EEEEEE solid; border-top: 1px #EEEEEE solid; line-height: 25px; padding: 5px 0 5px 100px;}
+.relation_list li{width: 100%; font-size: 14px; background-image: url(../img/friends.png); background-position-x: 40px; border-bottom: 1px #EEEEEE solid; border-top: 1px #EEEEEE solid; line-height: 25px; padding: 10px 0px 0px 100px;}
 .relation_name{ width: 100px; height: 25px; float: left; color: #c41e1e;}
 .relation_val{ width: 80px; height: 25px; float: right; color: #c41e1e;}
 .relation_btn{width: 100px; height: 32px; float: right; padding-top: 20px;}
 .relation_apply{ width: 60px; height: 20px; background-color: #F4F4F4; border: 1px #C8C8C8 solid; text-align: center; line-height: 20px; float: left; margin-right: 10px ;}
 .relation_record{ width: 60px; height: 20px; background-color: #F4F4F4; border: 1px #C8C8C8 solid; text-align: center; line-height: 20px; float: left;}
-
-
-
+.member{ width: 430px; position: relative;left:-100px;}
+.rel_list{ height: 25px;}
+.rel_list div { font-size: 14px; font-weight: bold;}
+.member li{ background-image: none; padding: 0px; margin: 0px; background-color: #CCCCCC; color: white; font-size: 14px; font-weight: bold;text-indent: 120px;}
+.rel_dis{ display: none;}
 
 
 
