--- a/app/assets/stylesheets/lightgreen.css
+++ b/app/assets/stylesheets/lightgreen.css
@@ -7,6 +7,7 @@
 .menu li{ float: left; width: auto; padding-left: 45px; line-height: 79px;text-align: left;}
 .menu li a{ font-size: 16px; color: #666666; text-decoration: none;}
 .menu li a:hover{ font-size: 16px; color: white; text-decoration: none;background-color: #707C74; padding: 10px;}
+.markup:hover{ font-size: 16px; color: white; text-decoration: none;background-color: #707C74; padding: 10px;}
 .regis li{ float: left; width: auto; line-height: 79px;padding-right: 10px;}
 .regis li a{ font-size: 16px; color: #666666;}
 .regis li a:hover{ font-size: 16px; color: white; text-decoration: none;background-color: #707C74; padding: 10px;}
