--- a/app/views/layouts/puresytle.html.erb
+++ b/app/views/layouts/puresytle.html.erb
@@ -12,8 +12,9 @@
       <script src="//cdnjs.cloudflare.com/ajax/libs/html5shiv/3.6.1/html5shiv.js" type="text/javascript"></script>
     <![endif]-->
 
-    <%= stylesheet_link_tag "lightgreen", :media => "all" %>
-    <%= stylesheet_link_tag "bootstrap_and_overrides", :media => "all" %>
+    <link rel="stylesheet" href="http://yui.yahooapis.com/pure/0.6.0/base-min.css">
+    <link rel="stylesheet" href="http://cdn.bootcss.com/pure/0.5.0/grids-core-min.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <!-- For third-generation iPad with high-resolution Retina display: -->
     <!-- Size should be 144 x 144 pixels -->
@@ -38,45 +39,22 @@
     <%= javascript_include_tag "application" %>
 	</head>
 	<body>
-		<div class="top_nav">
-			<div class="nav">
-				<ul class="menu">
-					<li id="light"><a href="<%= root_path %>">首页</a></li>
-					<li><%= link_to "立刻赚钱", root_path  %></li>
-          		  	<li><%= link_to "玩法", root_path  %></li>
-           			<li><%= link_to "下载app", root_path  %></li>
-				</ul>
-				<ul class="regis">
-        <% if session[:progress_id] %>
-        <li><span>欢迎您，<%= session[:username] %></span></li>
-        <li class="dropdown">
-          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">个人中心 <span class="caret"></span></a>
-          <ul class="dropdown-menu" role="menu">
-            <li><a href="#">我的账户</a></li>
-            <li><a href="#">我的产品</a></li>
-            <li class="divider"></li>
-            <li><%= link_to '安全注销',
-                      session_path(Session.find(session[:progress_id])),
-                      :method => :delete,
-                      :data => { :confirm => t('.confirm', :default => '确实要退出吗?') } %></li>
-          </ul>
-        </li>
-        <% else %>
-        <li><a href="<%= new_session_path %>" id='login_nav'>登录</a></li>
-          <li><a href="<%= users_new_register_path %>">注册</a></li>
-        <% end %>
-      </ul>
-				</ul>
-			</div>
-		</div>
-<br><br>
+		<div class="pure-menu pure-menu-horizontal">
+    <a href="#" class="pure-menu-heading pure-menu-link">BRAND</a>
+    <ul class="pure-menu-list">
+        <li class="pure-menu-item"><a href="#" class="pure-menu-link">News</a></li>
+        <li class="pure-menu-item"><a href="#" class="pure-menu-link">Sports</a></li>
+        <li class="pure-menu-item"><a href="#" class="pure-menu-link">Finance</a></li>
+    </ul>
+</div>
+	
+	<div class="pure-g">
+     <div class="pure-u-1-3"><p>Thirds</p></div> <div class="pure-u-1-3"><p>Thirds</p></div> <div class="pure-u-1-3"><p>Thirds</p></div> </div>
 
- <p class="alert"><%= alert %></p>
-          <%= bootstrap_flash %>
-          <div class="main_con">
-          <%= yield %>
-          </div> 
 
+
+
+ 
 
 				<div class="bottom">
 			 <div class="introduce">
