--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,11 +1,11 @@
 <div class="main_1">
-    <%= image_tag 'first_banner.png', alt:"uboss" %>
+    <%= image_tag 'first_banner.png', alt:"uboss" ,width: '100%' %>
     </div>
     <div class="main_2">
       <div class="toc">THE ONLY CHOICE</div>
     </div>
     <div class="main_3">
-    <%= image_tag 'banner_2.png', alt:"uboss" %>
+    <%= image_tag 'banner_2.png', alt:"uboss", width: '100%' %>
     </div>
     <div class="main_4">
        <div class="main_4_content">
@@ -16,7 +16,7 @@
        </div>
     </div>
     <div class="main_5">
-      <%= image_tag 'banner_3.png', alt:"uboss" %>
+      <%= image_tag 'banner_3.png', alt:"uboss", width: '100%' %>
     </div>
     <div class="main_6">
        <div class="main_6_content">
@@ -27,10 +27,11 @@
        </div>
     </div>
     <div class="main_7">
-      <%= image_tag 'banner_4.png', alt:"uboss" %>
+      <%= image_tag 'banner_4.png', alt:"uboss", width: '100%' %>
     </div>
     <div class="main_8">
        <div class="main_8_content">
+       
         <h3>全新的个人工作方式</h3>
         <p>曾几何时我们迷茫无助，曾几何时我们激动疯狂</p>
         <p>曾几何时我们迷茫无助，曾几何时我们激动疯狂</p>
