--- a/app/assets/stylesheets/personal.scss
+++ b/app/assets/stylesheets/personal.scss
@@ -1,3 +1,25 @@
 // Place all the styles related to the personal controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+        .bottom_div{
+            width: 100%;height: 56px;background-color: #1ab99b;position: absolute;bottom: 0;
+            line-height: 56px;text-align: center;color: #ffffff;font-size: 22px;
+        }
+        .left_top_div{
+            margin-top: 22px;
+        }
+        .left_top1{
+            height: 112px;
+            padding-top: 10px;
+            border: solid 1px #ddd;
+        }
+        .border_sty{
+            height: 71px;
+            padding-top: 10px;
+            border: solid 1px #ddd;
+            border-top:none ;
+        }
+        .right_top1{
+            margin-top: 20px;
+            height: 150px;
+        }
