--- a/app/assets/stylesheets/welcome.scss
+++ b/app/assets/stylesheets/welcome.scss
@@ -1,6 +1,61 @@
-// Place all the styles related to the welcome controller here.
-// They will automatically be included in application.css.
-// You can use Sass (SCSS) here: http://sass-lang.com/
-.to_link{
-	cursor: pointer;
-}
+/*
+ * This is a manifest file that'll be compiled into application.css, which will include all the files
+ * listed below.
+ *
+ * Any CSS and SCSS file within this directory, lib/assets/stylesheets, vendor/assets/stylesheets,
+ * or any plugin's vendor/assets/stylesheets directory can be referenced here using a relative path.
+ *
+ * You're free to add application-wide styles to this file and they'll appear at the bottom of the
+ * compiled file so the styles you add here take precedence over styles defined in any styles
+ * defined in the other CSS/SCSS files in this directory. It is generally better to create a new
+ * file per style scope.
+ *
+
+ */
+.login_div{
+            width: 365px;
+            height: 395px;
+            margin: auto;
+            margin-top: 40px;
+            background-color: #fff;
+            border:solid 1px #ddd;
+            border-width: 1px;
+            border-radius: 4px 4px 0 0;
+            -webkit-box-shadow: none;
+            box-shadow: none;
+        }
+        .group_top{
+            margin-top: 60px;
+        }
+        .form-control{
+            width: 90%;
+        }
+        .form-horizontal .form-group {
+            margin-top: 30px;
+        }
+        .forget_pwd{
+            padding-top: 7px;
+        }
+        .sub_sty{
+            width: 90%;
+        }
+        .bottom_div{
+            width: 100%;height: 56px;background-color: #1ab99b;position: fixed;bottom: 0;
+            line-height: 56px;text-align: center;color: #ffffff;font-size: 22px; 
+        }
+        .span{
+            background-color: #ff453a;
+            padding: 7px 7px 7px 9px;
+            margin-left: -29px;
+            -webkit-border-radius: 4px;
+            -moz-border-radius: 4px;
+            border-radius: 4px;
+            position: absolute;
+             display: none;
+
+        }
+        .span:before{
+            content: "\25c0";
+            margin-left: -18px;
+            color:#ff453a ;
+        }
