--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,30 +1,40 @@
-<p id="notice"><%= notice %></p>
-<h1>Listing Articles</h1>
-
-<table>
+<%- model_class = Article -%>
+<div class="page-header">
+  <h1><%=t '.title', :default => model_class.model_name.human.pluralize.titleize %></h1>
+</div>
+<table class="table table-striped">
   <thead>
     <tr>
-      <th>Title</th>
-      <th>Content</th>
-      <th>Comment</th>
-      <th colspan="3"></th>
+      <th><%= model_class.human_attribute_name(:id) %></th>
+      <th><%= model_class.human_attribute_name(:title) %></th>
+      <th><%= model_class.human_attribute_name(:content) %></th>
+      <th><%= model_class.human_attribute_name(:comment) %></th>
+      <th><%= model_class.human_attribute_name(:created_at) %></th>
+      <th><%=t '.actions', :default => t("helpers.actions") %></th>
     </tr>
   </thead>
-
   <tbody>
     <% @articles.each do |article| %>
       <tr>
+        <td><%= link_to article.id, article_path(article) %></td>
         <td><%= article.title %></td>
-        <td><%= article.content %></td>
+        <td><%= article.content.html_safe %></td>
         <td><%= article.comment %></td>
-        <td><%= link_to '查看', article %></td>
-        <td><%= link_to '编辑', edit_article_path(article) %></td>
-        <td><%= link_to '删除', article, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td><%=l article.created_at %></td>
+        <td>
+          <%= link_to t('.edit', :default => t("helpers.links.edit")),
+                      edit_article_path(article), :class => 'btn btn-default btn-xs' %>
+          <%= link_to t('.destroy', :default => t("helpers.links.destroy")),
+                      article_path(article),
+                      :method => :delete,
+                      :data => { :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure?')) },
+                      :class => 'btn btn-xs btn-danger' %>
+        </td>
       </tr>
     <% end %>
   </tbody>
 </table>
 
-<br>
-
-<%= link_to 'New Article', new_article_path %>
+<%= link_to t('.new', :default => t("helpers.links.new")),
+            new_article_path,
+            :class => 'btn btn-primary' %>
