--- a/app/views/articles/new.html.erb
+++ b/app/views/articles/new.html.erb
@@ -1,5 +1,4 @@
-<h1>New Article</h1>
-
-<%= render 'form' %>
-
-<%= link_to 'Back', articles_path %>
+<div class="container">
+<h2>新建文章</h2>
+<%= render :partial => 'form' %>
+</div>
