--- a/app/views/personal/index.html.erb
+++ b/app/views/personal/index.html.erb
@@ -1,2 +1,49 @@
-<h1>Personal#index</h1>
-<p>Find me in app/views/personal/index.html.erb</p>
+<%= stylesheet_link_tag "personal", :media => "all" %>
+<div class="col-sm-1"></div>
+</div>
+<div class="row">
+    <div class="col-sm-1"></div>
+    <div class="col-sm-10">
+        <div class="row">
+        <!--左边-->
+        <div class="col-sm-4">
+            <div class="left_top1">
+                <div class="col-sm-4"><%= image_tag("icon.png") %></div>
+                <div class="col-sm-8">
+                    <div class="left_top_div">
+                        <span>账户名:</span><span>啊佳明</span>
+                    </div>
+                    <div>
+                        <span>ID信息:</span><span>1221212</span>
+                    </div>
+                    <div>
+                        <span>修改资料:</span>
+                    </div>
+                </div>
+            </div>
+            <div class="left_top1 border_sty">
+                <div class="col-sm-4">营业额</div>
+                <br>
+                <div class="col-sm-offset-2 col-sm-8">123123123</div>
+            </div>
+            <div class="left_top1 border_sty">
+                <div class="col-sm-4">佣金</div>
+                <br>
+                <div class="col-sm-offset-2 col-sm-8">99999</div>
+            </div>
+        </div>
+        <!--右边-->
+        <div class="col-sm-8">
+            <div class="right_top1">
+                <div class="col-sm-6">我的账户</div>
+                <div class="col-sm-6">我的人脉</div>
+            </div>
+            <div>
+                <div class="col-sm-6">账户设置</div>
+                <div class="col-sm-6">我的订单</div>
+            </div>
+        </div>
+        </div>
+    </div>
+    <div class="col-sm-1"></div>
+</div>
