--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -9,7 +9,7 @@
     </div>
     <div class="main_4">
        <div class="main_4_content">
-        <h3>全新的个人工作方式</h3>
+        <h3><%= session[:user_agent] %></h3>
         <p>曾几何时我们迷茫无助，曾几何时我们激动疯狂</p>
         <p>曾几何时我们迷茫无助，曾几何时我们激动疯狂</p>
         <p>曾几何时我们迷茫无助，曾几何时我们激动疯狂</p>
