--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,8 +13,8 @@
 
  */
 .login_div{
-            width: 365px;
-            height: 395px;
+            width: 400px;
+            height: 400px;
             margin: auto;
             margin-top: 40px;
             background-color: #fff;
@@ -25,10 +25,10 @@
             box-shadow: none;
         }
         .group_top{
-            margin-top: 60px;
+            margin-top: 40px;
         }
         .form-control{
-            width: 90%;
+            width: 60%;
         }
         .form-horizontal .form-group {
             margin-top: 30px;
@@ -37,16 +37,16 @@
             padding-top: 7px;
         }
         .sub_sty{
-            width: 90%;
+            width: 60%;
         }
         .bottom_div{
             width: 100%;height: 56px;background-color: #1ab99b;position: fixed;bottom: 0;
             line-height: 56px;text-align: center;color: #ffffff;font-size: 22px;
         }
         .span{
-            background-color: #ff453a;
+            background-color: #DB8E71;
             padding: 7px 7px 7px 9px;
-            margin-left: -29px;
+            margin-left: 0px;
             -webkit-border-radius: 4px;
             -moz-border-radius: 4px;
             border-radius: 4px;
