--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,17 +1,17 @@
   <!DOCTYPE html>
-<html lang="en">
+<html lang="zh-CN">
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=Edge,chrome=1">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>uboss<% if @article %><%= @article.title %><% end %></title>
-    <%= csrf_meta_tags %>
+    
 
     <!-- Le HTML5 shim, for IE6-8 support of HTML elements -->
     <!--[if lt IE 9]>
       <script src="//cdnjs.cloudflare.com/ajax/libs/html5shiv/3.6.1/html5shiv.js" type="text/javascript"></script>
     <![endif]-->
-
+    <script src="http://cdn.bootcss.com/jquery/1.11.2/jquery.min.js"></script>
     <%= stylesheet_link_tag "application", :media => "all" %>
     <%= stylesheet_link_tag "bootstrap_and_overrides", :media => "all" %>
 
@@ -34,18 +34,11 @@
     <!-- For all other devices -->
     <!-- Size should be 32 x 32 pixels -->
     <%= favicon_link_tag 'favicon.ico', :rel => 'shortcut icon' %>
-
-    <%= javascript_include_tag "application" %>
   </head>
   <body>
-
+  <div class="container-fluid">
     <div class="navbar navbar-default navbar-static-top">
       <div class="container">
-        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-responsive-collapse">
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-        </button>
         <a class="navbar-brand" href="<%= root_url %>">Uboss</a>
         <div class="navbar-collapse collapse navbar-responsive-collapse">
           <ul class="nav navbar-nav">
@@ -67,15 +60,15 @@
                       </li>
                     <li><a href="<%= personal_index_path %>">个人中心</a></li>
                     <% else %>
-                    <li id="tab_login"><a href="<%= new_session_path %>">登陆</a></li>
-                    <li><a href="<%= users_new_register_path %>">注册</a></li>
+                    <li id="tab_login"><a href="<%= new_session_url %>">登陆</a></li>
+                    <li><a href="<%= users_new_register_url %>">注册</a></li>
                     <% end %>
                     
                 </ul>
         </div>
       </div>
     </div>
-
+</div>
     <div class="container">
       <div class="row">
         <div class="col-lg-12">
@@ -88,7 +81,7 @@
       
 
     </div> <!-- /container -->
-    <div class="bottom_div">@深圳市优易创网诺有限公司</div>
+    <div class="bottom_div">@深圳市优易创网络有限公司</div>
 
   </body>
   </html>
