--- a/app/views/layouts/purestyle.html.erb
+++ b/app/views/layouts/purestyle.html.erb
@@ -5,15 +5,17 @@
     <meta http-equiv="X-UA-Compatible" content="IE=Edge,chrome=1">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title><%= content_for?(:title) ? yield(:title) : "Uboss" %></title>
-    <%= csrf_meta_tags %>
 
     <!-- Le HTML5 shim, for IE6-8 support of HTML elements -->
     <!--[if lt IE 9]>
       <script src="//cdnjs.cloudflare.com/ajax/libs/html5shiv/3.6.1/html5shiv.js" type="text/javascript"></script>
     <![endif]-->
 
-    <link rel="stylesheet" href="http://yui.yahooapis.com/pure/0.6.0/base-min.css">
-    <link rel="stylesheet" href="http://cdn.bootcss.com/pure/0.5.0/grids-core-min.css">
+    <link rel="stylesheet" href="http://cdn.bootcss.com/pure/0.6.0/base-min.css">
+    <link rel="stylesheet" href="http://cdn.bootcss.com/pure/0.6.0/base-context-min.css">
+    <link rel="stylesheet" href="http://cdn.bootcss.com/pure/0.6.0/pure-min.css">
+    <link rel="stylesheet" href="http://cdn.bootcss.com/pure/0.5.0/menus-min.css">
+    <%= stylesheet_link_tag "purestyle"%>
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <!-- For third-generation iPad with high-resolution Retina display: -->
@@ -35,31 +37,19 @@
     <!-- For all other devices -->
     <!-- Size should be 32 x 32 pixels -->
     <%= favicon_link_tag 'favicon.ico', :rel => 'shortcut icon' %>
-
-    <%= javascript_include_tag "application" %>
 	</head>
 	<body>
-		<div class="pure-menu pure-menu-horizontal">
-    <a href="#" class="pure-menu-heading pure-menu-link">BRAND</a>
-    <ul class="pure-menu-list">
-        <li class="pure-menu-item"><a href="#" class="pure-menu-link">News</a></li>
-        <li class="pure-menu-item"><a href="#" class="pure-menu-link">Sports</a></li>
-        <li class="pure-menu-item"><a href="#" class="pure-menu-link">Finance</a></li>
-    </ul>
+    
+          <%= yield %>
+<div>© 深圳市优易创网络发展有限公司 2015</div>
+<div class="footer">
+    <div class="nav_cust pure-g pure-menu pure-menu-open pure-menu-horizontal">
+        <div class="pure-u-1-4"><a href="#">主页</a></div>
+        <div class="pure-u-1-4"><a href="#">成为BOSS</a></div>
+        <div class="pure-u-1-4"><a href="#">UBOSS学堂</a></div>
+        <div class="pure-u-1-4 pure-menu-selected"><a href="#">关于</a></div>
+    </div>  
 </div>
-	
-	<div class="pure-g">
-     <div class="pure-u-1-3"><p>Thirds</p></div> <div class="pure-u-1-3"><p>Thirds</p></div> <div class="pure-u-1-3"><p>Thirds</p></div> </div>
-
-
-
-
- 
-
-				<div class="bottom">
-			 <div class="introduce">
-			 	© 深圳市优易创网络发展有限公司 2015
-			 </div>
-		</div>
+   
 	</body>
 </html>
