--- a/app/views/users/new_register.html.erb
+++ b/app/views/users/new_register.html.erb
@@ -1,44 +1,61 @@
 <div class="container-fluid" style="min-height: 100%;height: 100%">
-    <div class="col-sm-12">
+    <div class="col-sm-14">
         <div class="login_div bs-example">
         <%= form_for @user, url: users_register_path, :html => {:class => "form-horizontal group_top", :onsubmit => "return validateAll()" } do |f| %>
            
                 <div class="form-group">
-                    <label for="inputuser" class="col-sm-3 control-label">用户名</label>
-                    <div class="col-sm-9" style="position: relative">
-                    <%= f.text_field :username, class: "form-control", id: "inputuser", placeholder: "用户名", onblur: "login_user()", onkeydown: "hide_name_span()"  %>
-
+                    <label for="input_username" class="col-sm-3 control-label">用户名</label>
+                    <div class="col-sm-8" style="position: relative">
+                    <%= f.text_field :username, 
+                        class: "form-control", 
+                        id: "input_username",
+                        placeholder: "由5～20个数字或字母组成", 
+                        inputtype: "username",
+                        onblur: 'checkOnBlur(this)', 
+                        onkeyup: 'checkOnKeyUp(this)'  %>
                     </div>
-                    <span class="span name_span">用户名不能为空，长度为5-20个字符</span>
+                    <div class="col-sm-offset-4 span tips_username"></div>
                 </div>
                 <div class="form-group">
-                    <label for="emai" class="col-sm-3 control-label">邮箱</label>
-                    <div class="col-sm-9" style="position: relative">
-                    <%= f.email_field :email, class: "form-control", id: "inputuser", placeholder: "请输入正确邮箱格式", onblur: "login_email", onkeydown: "hide_email_span" %>
+                    <label for="input_email" class="col-sm-3 control-label">邮箱</label>
+                    <div class="col-sm-8" style="position: relative">
+                    <%= f.email_field :email, 
+                        class: "form-control", 
+                        id: "input_email",
+                        placeholder: "someone@example.com", 
+                        inputtype: "email",
+                        onblur: "checkOnBlur(this)", 
+                        onkeyup: "checkOnKeyUp(this)" %>
 
                     </div>
-                    <span class="span emai_span">邮箱不能以 - _ .以及其它特殊字符开头和结束</span>
+                    <div class="col-sm-offset-4 span tips_email"></div>
                 </div>
                 <div class="form-group">
-                    <label for="inputPassword" class="col-sm-3 control-label">密码</label>
-                    <div class="col-sm-9">
-                    <%= f.password_field :password, class: "form-control", id: "inputPassword", placeholder: "请输入密码", onblur: "login_pwd()", onkeydown: "hide_pwd_span()" %>
+                    <label for="input_pwd" class="col-sm-3 control-label">密码</label>
+                    <div class="col-sm-8">
+                    <%= f.password_field :password, 
+                        class: "form-control", 
+                        id: "input_pwd", 
+                        placeholder: "由8～20个数字和字母组成", 
+                        inputtype: "pwd",
+                        onblur: "checkOnBlur(this)", 
+                        onkeyup: "checkOnKeyUp(this)" %>
                        
                     </div>
-                    <span class="span pwd_span">用户名不能为空，长度为5-20个字符</span>
+                    <div class="col-sm-offset-4 span tips_pwd"></div>
                 </div>
                 <div class="form-group">
-                    <label for="inputPassword2" class="col-sm-3 control-label">确认密码</label>
-                    <div class="col-sm-9">
-                    <%= f.password_field :password_confirm, class: "form-control", id: "inputPassword2", placeholder: "确认密码", onblur: "login_pwd2()" %>
+                    <label for="input_pwd2" class="col-sm-3 control-label">确认密码</label>
+                    <div class="col-sm-8">
+                    <%= f.password_field :password_confirm, 
+                        class: "form-control", 
+                        id: "input_pwd2", 
+                        placeholder: "确认密码",
+                        inputtype: "pwd2", 
+                        onblur: "checkOnBlur(this)",
+                        onkeyup: "checkOnKeyUp(this)" %>
                     </div>
-                    <span class="span pwd2_span">用户名不能为空，长度为5-20个字符</span>
-                </div>
-                <div class="form-group">
-                    <div class="col-sm-offset-3 col-sm-9">
-                        <button type="submit" class="btn btn-default sub_sty">登录</button>
-                    </div>
-
+                    <div class="col-sm-offset-4 span tips_pwd2"></div>
                 </div>
                 <div class="form-group">
                     <div class="col-sm-offset-3 col-sm-5">
@@ -49,6 +66,13 @@
                         </div>
                     </div>
                 </div>
+                <div class="form-group">
+                    <div class="col-sm-offset-3 col-sm-9">
+                        <button type="submit" class="btn btn-default sub_sty">注 册</button>
+                    </div>
+
+                </div>
+                
 
            <% end %>
 
@@ -57,119 +81,163 @@
     </div>
 </div>
 <script>
+
+    var rules = {
+        username: /^[0-9A-Za-z]{5,16}$/, 
+        pwd: /^(?![0-9]+$)(?![a-zA-Z]+$)[0-9A-Za-z]{8,20}$/, 
+        email: /^(\w)+(\.\w+)*@(\w)+((\.\w{2,3}){1,3})$/
+    };
+
+    var inputErrorTips = {
+        username: '由5～16个数字或字母组成',
+        pwd: '由8～20个数字和字母组成，必须包含数字和字母',
+        pwd2: '两次密码输入不相符',
+        email: '请输入正确的邮箱'
+    };
+
+    var emptyTips = {
+        username: '用户名不能为空',
+        pwd: '密码不能为空',
+        email: '邮箱不能为空'
+    };
+
+    var blurErrorTips = {
+        username: '由5～26个数字或字母组成',
+        pwd: '由8～20个数字和字母组成，必须包含数字和字母',
+        pwd2: '两次密码输入不相符',
+        email: '请输入正确的邮箱'
+    };
+
+    var num = 4;
+
+    var tipsDiv = {};
+
+    var validate = {};
+
+    var btnSubmit;
+
     $(function(){
-        $("#inputuser").focus(function(){
-            $(".name_span").show();
-            $(".name_span").html("用户名不能为空，长度为5-20个字符");
+        tipsDiv['username'] = $(".tips_username");
+        tipsDiv['email'] = $(".tips_email");
+        tipsDiv['pwd'] = $(".tips_pwd");
+        tipsDiv['pwd2'] = $(".tips_pwd2");
+        btnSubmit = $(".sub_sty");
+        checkAllAndSetButton();
+    });
 
-        })
-        $("#inputPassword").focus(function(){
-            $(".pwd_span").show();
-            $(".pwd_span").html("用户名不能为空，长度为5-20个字符");
+    var pwd = "";
 
-        })
-        $("#emai").focus(function(){
-            $(".emai_span").show();
-            $(".emai_span").html("邮箱不能以 - _ .以及其它特殊字符开头和结束");
+    function checkOnBlur(e){
+        var jqElement = $(e);
+        var value = jqElement.val();
+        var type = jqElement.attr("inputtype");
+        if (type == "pwd"){
+            pwd = value;
+        }
 
-        })
-
-
-    })
-    function login_user(){
-        var input1 = $("#inputuser").val();
-            if(null == input1 || "" == input1){
-                //判断用户名是否为空
-                $(".name_span").html("用户名不能为空");
-                $(".name_span").show();
-                return false;
-            }else{
-                var str = /^[\u4e00-\u9fa5A-Za-z0-9\-\_\*]{5,20}$/;
-                if(!str.test(input1)){
-                 //如果不满足正则表达式
-                    $(".name_span").html("用户名不能为空，长度为5-20个字符");
-                    $(".name_span").show();
-                    return false;
-                }else{
-                //满足规则
-                    $(".name_span").html("用户名不能为空，长度为5-20个字符");
-                    $(".name_span").hide();
-                    return true;
-                }
+        //确认密码为空时
+        if (type == "pwd2"){
+            if (value != pwd){
+                tryShowTips(blurErrorTips, type);
+                validate[type] = false;
+                return;
             }
+            hideTips(type);
+            validate[type] = true;
+            checkAllAndSetButton();
+            return;
+        }
+
+        //输入为空时
+        if (isInputEmpty(value)){
+            tryShowTips(emptyTips, type);
+            validate[type] = false;
+            return;
+        }
+
+        //输入不合法时
+        if (!isInputLegal(value, type)){
+            tryShowTips(blurErrorTips, type);
+            validate[type] = false;
+            return;
+        }
+
+        hideTips(type);
+        validate[type] = true;
+        checkAllAndSetButton();
+        return;
     }
-    function hide_name_span(){
-        $(".name_span").hide();
+
+    function checkOnKeyUp(e){
+        var jqElement = $(e);
+        var value = jqElement.val();
+        var type = jqElement.attr("inputtype");
+        if (type == "pwd"){
+            pwd = value;
+        }
+
+        if (isInputEmpty(value)){
+            tryShowTips(emptyTips, type);
+            validate[type] = false;
+            return;
+        }
+
+        //输入不合法时
+        if (!isInputLegal(value, type)){
+            tryShowTips(inputErrorTips, type);
+            validate[type] = false;
+            return;
+        }
+
+        hideTips(type);
+        validate[type] = true;
+        checkAllAndSetButton();
+        return;
     }
-    function hide_pwd_span(){
-        $(".pwd_span").hide();
+
+    function checkAllAndSetButton(){
+        if (isAllLegal()){
+            btnSubmit.removeAttr("disabled");
+            return;
+        }
+        btnSubmit.attr({"disabled":"disabled"});
     }
-    function hide_email_span(){
-        $(".emai_span").hide();
-    }
-    function login_pwd(){
-        var input2 = $("#inputPassword").val();
-        if(null == input2 || "" == input2){
-            //判断用户名是否为空
-            $(".pwd_span").html("密码不能为空");
-            $(".pwd_span").show();
+
+    function isAllLegal(){
+        if (validate.length < num || validate == undefined)
+        {
             return false;
-        }else{
-            var str = /^[\u4e00-\u9fa5A-Za-z0-9\-\_\*]{5,20}$/;
-            if(!str.test(input2)){
-                //如果不满足正则表达式
-                $(".pwd_span").html("密码不能为空，长度为5-20个字符");
-                $(".pwd_span").show();
+        }
+        for (eachVal in validate){
+            if (!eachVal){
                 return false;
-            }else{
-                //满足规则
-                $(".pwd_span").html("密码不能为空，长度为5-20个字符");
-                $(".pwd_span").hide();
-                return true;
             }
         }
-    }
-    function login_pwd2(){
-        var pwd1= $("#inputPassword").val();
-        var pwd2= $("#inputPassword2").val();
-        if(pwd1!=pwd2){
-            $(".pwd2_span").html("2个密码输入不一致")
-            return false
-        }else{
-            return true
-        }
+        return true;
     }
 
+    function isInputEmpty(value){
+        return value == null || value == "";
+    }
 
-function login_email(){
-    var emal = $("#emai").val();
-    if(null == emal || "" == emal){
-        //判断用户名是否为空
-        $(".emai_span").html("邮箱不能为空");
-        $(".emai_span").show();
-        return false;
-    }else{
-        var str = /^[a-z0-9]+([._\\-]*[a-z0-9])*@([a-z0-9]+[-a-z0-9]*[a-z0-9]+.){1,63}[a-z0-9]+$/;
-        if(!str.test(emal)){
-            //如果不满足正则表达式
-            $(".emai_span").html("邮箱格式有误");
-            $(".emai_span").show();
-            return false;
-        }else{
-            //满足规则
-            $(".emai_span").html("邮箱不能以 - _ .以及其它特殊字符开头和结束");
-            $(".emai_span").hide();
-            return true;
+    function isInputLegal(value, type){
+        return rules[type].test(value);
+    }
+
+    function tryShowTips(tips, type){
+        if (tips[type] != null){
+            tipsDiv[type].html(tips[type]);
+            tipsDiv[type].show();
+            return;
         }
+        hideTips(type);
     }
+
+    function hideTips(type){
+        tipsDiv[type].hide();
     }
+
     function validateAll(){
-        var flag = true;
-        if(login_user() && login_email() && login_pwd() && login_pwd2()){
-            flag = true;
-        }else{
-            alert("你输入的相关信息有问题")
-            return flag;
-        }
+        return true;
     }
 </script>
